assets/screen.css
body {
    color:  #333333;
    margin: 0 auto;
    font: lighter 1.0em Helvetica, Arial, sans-serif;
    padding-top: 24px;
    width: 940px;
    line-height: 1.6em;
}

h1,h2,h3,h4 {
   font-family: Nobile, sans-serif;
   margin-bottom: 1em;
   font-weight: bold;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizelegibility;
}

h1, h3 { font-size: 150%; }
h2 { font-size: 125%; }
h4 { font-size: 125%; color: #666; }
h5, h6 { font-size: 125%; color: #888 }

a { text-decoration: none; }
a:link:hover, a:active:hover, a:visited:hover { text-decoration: underline }
a.img { border: none; background:transparent; }

h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a, h1 > a:hover, h2 > a:hover, h3 > a:hover, h4 > a:hover, h5 > a:hover, h6 > a:hover {
   color: inherit !important;
   background-color:transparent !important;
}

.branding {
   margin: 0;
   font-style: italic;
   color: #204a87;
   font: lighter 50px Cambria, Georgia, Times, serif;
   text-decoration: none;
}

.branding a:hover {
    text-decoration: none;
}

.date {
    border-top: 2px solid #CCC;
    text-align: center;
    line-height: 1.25;
    color: #555753;
    font-size: 1.2em;
    text-transform: lowercase;
    font-variant: small-caps;
}
.date .month, .date .day {
  display: block;
}

#posts {
    margin: 2.5em auto 0;
}

#menu {
   height: 50px;
   margin: 40px 0;
   border-bottom: 1px solid #eee;
}

.post {
   margin-bottom: 2.5em;
}

ul.navigation {
    text-align: left;
    float: right;
}

ul.navigation li {
    display: inline-block;
    list-style: none;
    margin-right: 1.25em;
}

ul.navigation li a {
    display: block;
    color: #333333;
    text-decoration: none;
    line-height: 50px;
    border-bottom: 1px solid #eee;
}

ul.navigation li a:hover, ul.navigation li a:active {
    text-decoration: none;
    border-bottom: 1px solid #204a87;
}

p {
     margin-bottom: 24px;
}

/*
p+p {
     text-indent: 1em;
     margin-top: -24px;
}
*/
ul, ol {
    margin-bottom: 24px;
}
ul {
    list-style: square outside;
}
ul ul, ol ol {
    margin: 0 0 0 60px;
}
ul > li {
   margin-left: 1.4em;
}
blockquote {
    margin: 0 60px 0 45px;
    border-left: 5px solid #ccc;
    padding-left: 10px;
    text-indent: -0.4em;
}
blockquote b {
    display: block;
    text-indent: 0;
}

#footer {
    border-top: 1px solid #eee;
    font-size: 0.7em;
    margin: 40px 0;
    padding-top: 1em;
    font-family: Helvetica, Verdana, Arial, sans-serif;
}

